# pnd-gui

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
docs/: encryption_protocol.md  ios_pwa_port_plan.md  tech_debts.md
src/: App.css  App.tsx
src-cli/: CLAUDE.md  Cargo.toml  VAULT_PLAN.md  command_line_args.md
src-cli/.cargo/: config.toml
src-cli/docs/: 00_index.md  01_overview.md  02_tui.md  03_encrypt_decrypt.md  04_preview.md  05_vault_concepts.md  06_vault_list.md  07_vault_tui.md  08_vault_preview_export.md  09_vault_add.md  10_vault_rename_move_delete.md  11_scripting.md
src-cli/specs/: piping.md
src-cli/src/: cli.rs  crypto.rs  enc_dec_cli.rs  file_browser.rs  main.rs  password.rs  preview_cli.rs  vault_add_cli.rs  vault_init_cli.rs  vault_list_cli.rs  vault_op_cli.rs  vault_rmd_cli.rs  yazi.rs
src-cli/src/pages/: enc_dec.rs  mod.rs  preview.rs  vault.rs  widgets.rs
src-cli/src/pages/enc_dec/: draw.rs  handler.rs  mod.rs  state.rs
src-cli/src/pages/preview/: draw.rs  gallery.rs  handler.rs  image.rs  media.rs  mod.rs  state.rs  text.rs
src-cli/src/pages/vault/: crypto.rs  draw.rs  handler.rs  state.rs  types.rs
src-cli/src/pages/vault/draw/: forms.rs  overlays.rs  util.rs
src-cli/src/pages/vault/handler/: browse.rs  overlays.rs  setup.rs
src-cli/src/pages/vault/state/: helpers.rs
src-cli/tests/: preview_stdin_smoke.rs  stdin_smoke.rs  stdout_smoke.rs  vault_init_smoke.rs  vault_stdin_smoke.rs
src-tauri/: Cargo.toml  tauri.conf.json
(+90 files in other folders)
