[package]
name = "pnd-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"
image    = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "tiff"] }
base64   = "0.22"
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
zip      = { version = "2", default-features = false, features = ["deflate"] }

# Compile crypto crates at full optimisation even in debug builds.
# PBKDF2 + AES-GCM are 10-50x slower without -O3; this costs no debug-ability
# in the application code.
[profile.dev.package.aes-gcm]
opt-level = 3
[profile.dev.package.aes]
opt-level = 3
[profile.dev.package.pbkdf2]
opt-level = 3
[profile.dev.package.sha2]
opt-level = 3
[profile.dev.package.hmac]
opt-level = 3
